--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,20 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${JDBC_DATASOURCE_URL}
+#jdbc:postgresql://localhost:5432/pronto-api?createDatabaseIfNotExist=true&useSSL=false
 #spring.datasource.username=postgres
 #spring.datasource.password=2950dI57
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 #Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
