--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-#spring.datasource.url=jdbc:postgresql://localhost:5432/pronto-api?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/pronto-api?createDatabaseIfNotExist=true&useSSL=false
 
-spring.datasource.url=${DATABASE_URL}
+#spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.username=postgres
-#spring.datasource.password=2950dI57
-#spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=2950dI57
+spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.maxActive=10
 #spring.datasource.maxIdle=5
 #spring.datasource.minIdle=2
@@ -23,6 +23,6 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=true
 #Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-#spring.jpa.hibernate.ddl-auto=update
+
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
