--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/pronto-api?createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.url=jdbc:postgresql://localhost:5432/pronto-api?createDatabaseIfNotExist=true&useSSL=false
 
-#spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.username=postgres
-spring.datasource.password=2950dI57
-spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=2950dI57
+#spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.maxActive=10
 #spring.datasource.maxIdle=5
 #spring.datasource.minIdle=2
