--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 
 spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.show-sql=true
 #spring.datasource.username=postgres
 #spring.datasource.password=2950dI57
 #spring.datasource.driverClassName=org.postgresql.Driver
@@ -19,7 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 # = JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-#spring.jpa.show-sql=true
+
 #spring.jpa.generate-ddl=true
 #Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
